[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/bigbat.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/foes-bigbat.png" type="Texture" id=2]
[ext_resource path="res://samples/death.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 16.0

[node name="BigBat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Fly"
frame = 1
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="RayAttack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )

[node name="AttackPosition" type="Position2D" parent="."]
position = Vector2( -21, 15 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
physics_process_parent = true

[node name="AudioDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
